--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "/": ["./src/index.ts"]
+    }
   }
 }
