--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@honse/types",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "TS Types for honse draw project",
   "main": "index.ts",
-  "scripts": {},
+  "scripts": {
+    "prepublishOnly": "tsc && rollup -c"
+  },
   "type": "module",
   "author": "otho",
   "license": "ISC",
@@ -16,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/othomation/honse-types/issues"
   },
-  "homepage": "https://github.com/othomation/honse-types#readme"
+  "homepage": "https://github.com/othomation/honse-types#readme",
+  "dependencies": {
+    "rollup": "^4.9.4"
+  }
 }
